--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <p class="text">
       <H2>What is your name?</H2>
     </p>
-    <input class="input" type="text">
+    <form class = "form">
+    <input class="input" type="text" value="Name">
     <input class="input" type="button" value="Log In">
+    </form>
   </div>
 
 </body>
